--- a/package.json
+++ b/package.json
@@ -3,16 +3,26 @@
     "description": "Hello World ExpressJS WebService",
     "version": "0.0.1",
     "private": true,
+    "scripts": {
+        "predebug": "grunt",
+        "debug": "open http://localhost:3000 & open http://localhost:8080/debug?port=5858",
+        "postdebug": "node-inspector & node --debug app",
+        "start": "node start-dev",
+        "dev": "open http://localhost:3000 & node-dev start-dev & grunt watch",
+        "test": "mocha --recursive tests"
+    },
     "dependencies": {
+        "aws-serverless-express": "3.1.3",
         "express": "4.16.2",
-        "aws-serverless-express": "3.1.3"
+        "node-dev": "^3.1.3"
     },
     "devDependencies": {
+        "debug": "~2.6.9",
+        "grunt": "^1.0.3",
+        "grunt-browserify": "^5.3.0",
+        "grunt-contrib-jshint": "^2.0.0",
+        "grunt-contrib-watch": "^1.1.0",
         "mocha": "5.0.0",
-        "unit.js": "2.0.0",
-        "supertest": "3.0.0"
-    },
-    "scripts": {
-        "test": "mocha --recursive tests"
+        "unit.js": "^2.0.0"
     }
 }
