--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "dependencies": {
         "aws-serverless-express": "3.1.3",
         "express": "4.16.2",
-        "node-dev": "^3.1.3"
+        "node-dev": "^3.1.3",
+        "jade": "~1.11.0"
     },
     "devDependencies": {
         "debug": "~2.6.9",
