--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
         "grunt-contrib-jshint": "^2.0.0",
         "grunt-contrib-watch": "^1.1.0",
         "mocha": "5.0.0",
-        "supertest": "^3.3.0",
-        "unit.js": "^2.0.0"
+        "supertest": "^3.3.0"
     }
 }
