--- a/package.json
+++ b/package.json
@@ -13,9 +13,12 @@
     },
     "dependencies": {
         "aws-serverless-express": "3.1.3",
+        "bcrypt": "^3.0.2",
         "express": "4.16.2",
-        "node-dev": "^3.1.3",
-        "jade": "~1.11.0"
+        "jade": "~1.11.0",
+        "jsonwebtoken": "^8.4.0",
+        "memcached": "^2.2.2",
+        "moment": "^2.23.0"
     },
     "devDependencies": {
         "debug": "~2.6.9",
@@ -23,6 +26,7 @@
         "grunt-browserify": "^5.3.0",
         "grunt-contrib-jshint": "^2.0.0",
         "grunt-contrib-watch": "^1.1.0",
+        "node-dev": "^3.1.3",
         "mocha": "5.0.0",
         "supertest": "^3.3.0",
         "unit.js": "^2.0.0"
